# LinuxDoSpaceCSDK

./: CMakeLists.txt  README.md
.agents/skills/linuxdo-space-c-sdk/: SKILL.md
.agents/skills/linuxdo-space-c-sdk/agents/: openai.yaml
.agents/skills/linuxdo-space-c-sdk/references/: api.md  consumer.md  development.md  examples.md
.github/workflows/: ci.yml  release.yml
examples/: simple.c
include/linuxdospace/: sdk.h
src/: sdk.c
